Bug 139322 - [UI] Can not change the focus to Manage Names dialog with the keyboard
Summary: [UI] Can not change the focus to Manage Names dialog with the keyboard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.7.2 release
Hardware: All Windows (All)
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0
Keywords: accessibility, bibisected, regression
Depends on:
Blocks: a11y, Accessibility Named-Range-Dialogs
  Show dependency treegraph
 
Reported: 2020-12-30 15:55 UTC by LeroyG
Modified: 2025-02-21 17:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LeroyG 2020-12-30 15:55:26 UTC
Description:
Can not close unfocused Manage Names dialog using keyboard.

Steps to Reproduce:
1. Click in the Name Box (or press Ctrl+Shift+T) then…
2.a. …unfold the names list¹ and accept Manage Names.
or
2.b.1. (Version: 6.4.7 (x86)) …press Down Arrow or Up Arrow.
2.b.2. (Version: 7.0.4 (x86)) …press Down Arrow until Manage Names… is highlighted, then press Enter.

¹ Press Alt+Down Arrow to unfold the names list.

Actual Results:
after 2: Manage Names dialog is open but without focus. You can change the active cell with the Arrow keys, Home, End, PgUp, PgDw, and combinations with Ctrl; only one move if combined with Shift.

Expected Results:
I think that there must be one alternative to close the dialog with the keyboard, at least to close the document.


Reproducible: Always


User Profile Reset: No



Additional Info:
Related question: https://ask.libreoffice.org/en/question/284952/

Neither Escape nor Alt+F4, Ctrl+F4, Ctrl+W can close the dialog or the document.

Manage Names dialog also opens with Ctrl+F3 but this way remain focused.

Version: 6.4.7.2 (x86)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
Locale: es-MX (es_MX); UI-Language: en-US
Calc: threaded

Version: 7.0.4.2 (x86)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: en-US
Calc: threaded
Comment 1 [REDACTED] 2020-12-30 16:46:54 UTC
Repro

Version: 7.1.0.1 (x64)
Build ID: b585d7d90ab863bf29b2d110c174c0c2a98f3ee4
CPU threads: 1; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 2 LeroyG 2021-01-03 14:26:19 UTC
And Ctrl+F3 do not recover the focus on the dialog.
Comment 3 LeroyG 2021-11-25 18:11:30 UTC
EDIT [Actual Results:
after 2: … only one move] from the original cell [if combined with Shift.]

Try holding Shift and press Up Arrow, Down Arrow, Left Arrow, Right Arrow, PgUp, PgDn, Home, End.

Version: 7.1.7.2 (x64) / LibreOffice Community
Build ID: c6a4e3954236145e2acb0b65f68614365aeee33f
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: es-MX (es_ES); UI: en-US
Calc: CL
Comment 4 LeroyG 2022-05-15 20:52:29 UTC
Esc key closes the dialog with:

Version: 7.2.3.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 1; OS: Linux 5.3; UI render: default; VCL: gtk3
Locale: es-MX (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 QA Administrators 2022-05-16 03:35:26 UTC Comment hidden (obsolete)
Comment 6 LeroyG 2022-05-16 13:49:23 UTC
Reproducible with:

Version: 7.3.2.2 (x86) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: es-ES
Calc: threaded
Comment 7 LeroyG 2022-05-27 13:01:06 UTC
Reproducible with:

Version: 7.4.0.0.alpha1 (x86) / LibreOffice Community
Build ID: b871abad383583f02eb49c7e49aeae01f6941072
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-MX (es_MX); UI: es-ES
Calc: threaded
Comment 8 Tammy 2022-12-17 20:47:05 UTC
This is reproducible with:

Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 98f0dd5e15733ac7f1d929d06ab230b5f04121d5
CPU threads: 8; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 9 Michael Weghorn 2023-03-13 08:47:25 UTC
(In reply to LeroyG from comment #0)
> Actual Results:
> after 2: Manage Names dialog is open but without focus.

I can reproduce that with the gtk3 VCL plugin on Linux and on Windows, but not with kf5 or gen on Linux.

The lacking initial focus is a regression, bibisected to:

    commit 6407eb952efae074850c4e8c52c630397914a145
    Author: Caolán McNamara
    Date:   Mon Feb 17 10:49:59 2020 +0000

        weld ScPosWnd Item Window
        
        Change-Id: I63eb8511a91a631be760b8ae62465c2dc3a05efc
        Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88856
        Tested-by: Jenkins
        Reviewed-by: Caolán McNamara

Pending Gerrit change to focus the dialog again when it opens:
https://gerrit.libreoffice.org/c/core/+/148775
Comment 10 Commit Notification 2023-03-13 09:43:30 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dd4f562cfdff35e99acc55f522f65f966fa7ee52

sc a11y: tdf#139322 Don't steal focus from "Manage Names" dialog

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.